Implementaione per i client WCF

--- a/WcfServiceLibrary2/App.config
+++ b/WcfServiceLibrary2/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -22,27 +22,22 @@
   <system.serviceModel>
     <services>
       <service name="WcfServiceLibrary2.Service1">
+        <clear />
+        <endpoint address="basic" binding="basicHttpBinding" contract="WcfServiceLibrary2.IService1"
+          listenUriMode="Explicit">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"
+          listenUriMode="Explicit" />
+        <endpoint address="ws" binding="wsHttpBinding" bindingConfiguration=""
+          contract="WcfServiceLibrary2.IService1" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary2/Service1/" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Se non è completamente qualificato, l'indirizzo è relativo all'indirizzo di base fornito sopra -->
-        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary2.IService1">
-          <!-- 
-              Durante la distribuzione è necessario rimuovere o sostituire l'elemento Identity seguente in modo 
-              che rispecchi l'identità con cui viene eseguito il servizio distribuito. Se viene rimosso, WCF dedurrà 
-               automaticamente un'identità appropriata.
-          -->
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- L'endpoint di scambio metadati viene utilizzato dal servizio per offrire una migliore visualizzazione ai client. -->
-        <!-- L'endpoint non utilizza un'associazione protetta e deve essere protetto o rimosso prima della distribuzione -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
