--- a/ConsoleWcfService2Host2/app.config
+++ b/ConsoleWcfService2Host2/app.config
@@ -10,6 +10,8 @@
                     contract="WcfServiceLibrary2.IService1" />
                 <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration=""
                     contract="IMetadataExchange" />
+                <endpoint address="ws" binding="wsHttpBinding" bindingConfiguration=""
+                    contract="WcfServiceLibrary2.IService1" />
                 <host>
                     <baseAddresses>
                         <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary2/Service1/" />
